// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props should render alignment 1`] = `
<div>
  <div
    class="style-flex style-items-column components-flex components-h-stack components-v-stack"
    data-wp-c16t="true"
    data-wp-component="VStack"
    style="--wp-components-flex-align: center; --wp-components-flex-direction: column; --wp-components-flex-wrap: nowrap; --wp-components-flex-gap: calc(4px * 2); --wp-components-flex-justify: center;"
  >
    <div />
    <div />
  </div>
</div>
`;

exports[`props should render correctly 1`] = `
<div>
  <div
    class="style-flex style-items-column components-flex components-h-stack components-v-stack"
    data-wp-c16t="true"
    data-wp-component="VStack"
    style="--wp-components-flex-align: stretch; --wp-components-flex-direction: column; --wp-components-flex-wrap: nowrap; --wp-components-flex-gap: calc(4px * 2); --wp-components-flex-justify: center;"
  >
    <div />
    <div />
  </div>
</div>
`;

exports[`props should render spacing 1`] = `
<div>
  <div
    class="style-flex style-items-column components-flex components-h-stack components-v-stack"
    data-wp-c16t="true"
    data-wp-component="VStack"
    style="--wp-components-flex-align: stretch; --wp-components-flex-direction: column; --wp-components-flex-wrap: nowrap; --wp-components-flex-gap: calc(4px * 5); --wp-components-flex-justify: center;"
  >
    <div />
    <div />
  </div>
</div>
`;
